--- a/src/main/resources/templates/user/BalanceRecharge.html
+++ b/src/main/resources/templates/user/BalanceRecharge.html
@@ -525,7 +525,7 @@
     </aside>
     <!-- /.control-sidebar -->
 </div>
-<form   name=alipayment  id="formDiv" action="alipaySum">
+<form   name=alipayment  id="formDiv" action="/alipaySum">
     <div id="body1" class="show" name="divcontent">
         <dl class="content">
             <dt>金额 ：</dt>
@@ -576,7 +576,7 @@
             $('#WIDsubject').attr("value",str);
             console.log(chargeInput);
             console.log(str);
-            //document.getElementById("btn").click();
+            document.getElementById("btn").click();
             // $.ajax({
             //     type: "POST",
             //     url: "/balance/postcharge",
